--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <body>
         <h1>Hello, world!</h1>
         <p>My name is Habibullo, and this is my very first webpage</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sit rerum veritatis
+            nam, voluptas voluptatum aliquid cupiditate sunt libero ducimus minus illum molestias
+            eius dicta unde, sequi amet, tempora repellat.
+        </p>
     </body>
 </html>
